- Initial directory structure - HTTP and Config utilities - Base toml file for configs - Base Miro and StoriesOnBoard HTTP connectors - Base text agglomerations (affinity grouping) - Successful Miro connection and pulll - Successful affinity group creation - Successful debug environment attach and run

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,11 +7,13 @@
       "settings": {},
       "extensions": [
         "ms-python.python",
-        "ms-python.vscode-pylance"
+        "ms-python.vscode-pylance",
+        "ms-python.requests",
+        "continer-tools.vscode-docker"
       ]
     }
   },
   "workspaceMount": "source=${localWorkspaceFolder},target=/app,type=bind,consistency=cached",
   "workspaceFolder": "/app",
-  "postCreateCommand": "python main.py"
+  "postCreateCommand": "python -m src.main"
 }
