Refactor configuration management and enhance connectors
- Added a [top] section in pyproject.toml for better organization.
- Introduced AWS configuration parameters in pyproject.toml.
- Updated Miro configuration to include MIRO_ON_TOGGLE and MIRO_RESULT_LIMIT.
- Modified Jira connector to format story summaries with cluster and story count.
- Refactored Miro connector to use pagination with cursor and updated parameter handling.
- Adjusted AI_DISTANCE_THRESHOLD in config for better clustering results.
- Enhanced main.py to conditionally connect to Miro and Jira based on configuration toggles.
- Improved config_helper.py to load configuration from a specified path.
- Added debug print statements for better traceability during execution.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,7 @@
       ]
     }
   },
+  "mounts": [ "source=${env:HOME}/.aws,target=/root/.aws,type=bind,consistency=cached" ],
   "workspaceMount": "source=${localWorkspaceFolder},target=/app,type=bind,consistency=cached",
   "workspaceFolder": "/app",
   "postCreateCommand": "python -m src.main"
