--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
       ]
     }
   },
-  "mounts": [ "source=${env:HOME}/.aws,target=/root/.aws,type=bind,consistency=cached" ],
+  "mounts": [ "source=${env:HOME}/.aws,target=/home/vscode/.aws,type=bind,consistency=cached" ],
   "workspaceMount": "source=${localWorkspaceFolder},target=/app,type=bind,consistency=cached",
   "workspaceFolder": "/app",
   "postCreateCommand": "python -m src.main"
