--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,19 +25,16 @@ HTTP_RETRIES = 3
 HTTP_BACKOFF_FACTOR = 0.5
 HTTP_TIMEOUT = 10
 
-[ai_grouping]
-AI_MODEL_NAME = "all-MiniLM-L6-v2"
-AI_CLUSTERS = 5
-AI_DISTANCE_THRESHOLD = 0.62
-AI_AGGLOMERATIVE_TYPE = "distance"   # Options: distance, cluster
-AI_LINKAGE_TYPE = "average"     # Options: ward, average, complete, single
-AI_METRIC_TYPE = "cosine"      # Options: euclidean, manhattan, cosine, precomputed
+[credentials]
+# These values should be set in AWS Secrets Manager and not hardcoded here
+# JIRA_USER = ""
+# JIRA_API_KEY = ""
+# MIRO_API_KEY = ""
+# OPENAI_API_KEY = ""
 
-[jira]
-JIRA_ON_TOGGLE = false
-JIRA_BASE_URL = "https://gdunkle.atlassian.net/rest/api/2"
-JIRA_PROJECT_KEY = "DEMO"
-JIRA_HTTP_CONTENT_TYPE = "application/json"
+[aws]
+AWS_REGION = "us-west-2"
+AWS_USM_SECRET = "user-story-mapper-secrets"
 
 [miro]
 MIRO_ON_TOGGLE = true
@@ -51,3 +48,18 @@ MIRO_RESULT_LIMIT = 10      # 10 <= limit <= 50; default = 10
 [storiesonboard]
 SOB_BASE_URL = ""
 SOB_BOARD_ID = ""
+
+[jira]
+JIRA_ON_TOGGLE = true
+JIRA_BASE_URL = "https://gdunkle.atlassian.net/rest/api/2"
+JIRA_PROJECT_KEY = "DEMO"
+JIRA_HTTP_CONTENT_TYPE = "application/json"
+
+
+[ai_grouping]
+AI_MODEL_NAME = "all-MiniLM-L6-v2"
+AI_CLUSTERS = 5
+AI_DISTANCE_THRESHOLD = 0.62
+AI_AGGLOMERATIVE_TYPE = "distance"   # Options: distance, cluster
+AI_LINKAGE_TYPE = "average"     # Options: ward, average, complete, single
+AI_METRIC_TYPE = "cosine"      # Options: euclidean, manhattan, cosine, precomputed
